@@ -391,15 +391,15 @@ $language_data = array (
             )
         ),
     'URLS' => array(
-        1 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        2 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        3 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        4 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        5 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        6 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        7 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        8 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
-        9 => 'http://search.mysql.com/search?site=refman-%35%31&amp;q={FNAME}',
+        1 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        2 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        3 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        4 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        5 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        6 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        7 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        8 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
+        9 => 'http://search.oracle.com/search/search?group=MySQL&amp;q={FNAME}',
 
         10 => 'http://dev.mysql.com/doc/refman/%35%2E%31/en/non-typed-operators.html',
         11 => 'http://dev.mysql.com/doc/refman/%35%2E%31/en/non-typed-operators.html',
